--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,9 @@ project(progetto-finale LANGUAGES CXX)
 
 add_executable(a
     src/Interface.cpp
-    src/main.cpp  
+    src/Casella.cpp
+    src/Giocatore.cpp
+    src/GiocatorePc.cpp
+    src/GiocatorePcHuman.cpp
+    src/main.cpp 
 )
