--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(progetto-finale LANGUAGES CXX)
 add_executable(a
     src/Interface.cpp
     src/Casella.cpp
+    src/Stampa.cpp
     src/Giocatore.cpp
     src/main.cpp 
 )
